# Raytracer

./: .gitignore  Cargo.toml  renovate.json
src/: algebra.rs  main.rs  rendering.rs  scene.rs
src/algebra/: utils.rs  vector.rs
src/rendering/: canvas.rs  colors.rs
src/scene/: environment.rs  projectile.rs
