[package]
name = "raytracer"
description = "Raytracer implementation following the book The Ray Tracer Challenge by Jamis Buck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto_ops = "0.3.0"
log = "0.4.21"
simple_logger = "4.3.3"
ctor = "0.2.6"
winit = "0.29.15"
softbuffer = "0.4.2"